# gihex-widget-c

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  doc.md
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
docs/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  index.html  menudata.js
docs/html/d1/de3/: struct__GihexCircularStepBar.html
docs/html/d2/d6f/: struct__GihexColor.html
docs/html/d6/dcb/: struct__GihexGaugeBar.html
docs/html/d7/d65/: gihex__circular__step__bar_8h.html  gihex__circular__step__bar_8h_source.html
docs/html/d9/d57/: gihex__arc__bar_8h.html  gihex__arc__bar_8h_source.html
docs/html/da/dfb/: gihex__gauge__bar_8h.html  gihex__gauge__bar_8h_source.html
docs/html/df/d66/: gihex__color_8h.html  gihex__color_8h_source.html
docs/html/df/d96/: struct__GihexArcBar.html
docs/html/search/: all_3.js  all_4.js  classes_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js
examples/: CMakeLists.txt  gihex_arc_bar.c  gihex_circular_step_bar.c  gihex_gauge_bar.c
src/: CMakeLists.txt  gihex_arc_bar.c  gihex_arc_bar.h  gihex_circular_step_bar.c  gihex_circular_step_bar.h  gihex_color.c  gihex_color.h  gihex_gauge_bar.c  gihex_gauge_bar.h
